MNPL-5 | Add user registration
